[package]
name = "linuxlab-20190405-wasm"
version = "1.0.0"
authors = ["Paweł Kraszewski <pawel@kraszewscy.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webserwer"
path = "src/serwer/main.rs"

[dependencies]
wasm-bindgen = "^0.2"
iron = "^0.6"
staticfile = "^0.5"
mount = "^0.4"
router = "^0.6"
mime = "^0.3"
time = "^0.1"

[dependencies.web-sys]
version = "^0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
